[tool.poetry]
name = "doca"
version = "0.1.0"
description = ""
authors = ["Sören Berger <soeren.berger@u1337.de>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.2"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}

[tool.poetry.scripts]
doca = "doca.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
